Fix tests compilation #91
(cherry picked from commit 70691c79bdb3ce1611eb4873efa5c4b864bd8a96)