@@ -53,8 +53,8 @@ public class Camunda7ProcessInstanceTerminateTest extends AbstractCamunda7Integr
                 .deploy("test_support/testVisitPlanningV1.bpmn")
                 .startByKey("visitPlanning");
 
-        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").getFirst();
-        String instanceId = camundaRestTestHelper.getRuntimeInstancesById(camunda7, processId).getFirst().getId();
+        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").get(0);
+        String instanceId = camundaRestTestHelper.getRuntimeInstancesById(camunda7, processId).get(0).getId();
 
         camundaRestTestHelper.suspendInstanceById(camunda7, instanceId);
 
@@ -82,7 +82,7 @@ public class Camunda7ProcessInstanceTerminateTest extends AbstractCamunda7Integr
                 .deploy("test_support/testVisitPlanningV1.bpmn")
                 .startByKey("visitPlanning", 2);
 
-        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").getFirst();
+        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").get(0);
         camundaRestTestHelper.suspendInstanceByProcessId(camunda7, processId);
 
         List<String> suspendedInstanceIds = camundaRestTestHelper.getSuspendedInstancesByProcessId(camunda7, processId);
@@ -117,8 +117,8 @@ public class Camunda7ProcessInstanceTerminateTest extends AbstractCamunda7Integr
                 .deploy("test_support/testVisitPlanningV1.bpmn")
                 .startByKey("visitPlanning");
 
-        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").getFirst();
-        String instanceId = camundaRestTestHelper.getRuntimeInstancesById(camunda7, processId).getFirst().getId();
+        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").get(0);
+        String instanceId = camundaRestTestHelper.getRuntimeInstancesById(camunda7, processId).get(0).getId();
 
         //when
         processInstanceService.terminateById(instanceId);
@@ -143,7 +143,7 @@ public class Camunda7ProcessInstanceTerminateTest extends AbstractCamunda7Integr
                 .deploy("test_support/testVisitPlanningV1.bpmn")
                 .startByKey("visitPlanning", 2);
 
-        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").getFirst();
+        String processId = sampleDataManager.getDeployedProcessVersions("visitPlanning").get(0);
         List<String> activeInstanceIds = camundaRestTestHelper.getActiveInstancesByProcessId(camunda7, processId);
 
         //when
